--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,6 +1,6 @@
 on: [ push ]
 
-name: Build
+name: BuildLinux
 
 jobs:
   build:
@@ -69,9 +69,8 @@ jobs:
       - name: Cache Dependencies
         uses: Swatinem/rust-cache@v1.2.0
 
-      - name: Build Linux Musl
+      - name: Build Linux
         uses: jean-dfinity/rust-musl-action@master
-        if: ${{ matrix.target == 'x86_64-unknown-linux-musl'}}
         with:
           args: rustup default nightly && rustup target add ${{ matrix.target }} && cargo +nightly build --target=${{ matrix.target }} --release
 
@@ -87,21 +86,13 @@ jobs:
           ls -al
           sudo zip -r ${{ matrix.target }}.zip admin* server* -x admin.d -x admin.pdb -x server.d -x server.pdb
 
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/${{matrix.target}}/release/${{ matrix.target }}.zip
-          asset_name: ${{ matrix.target }}.zip
-          asset_content_type: application/zip
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.target }}.zip
-          path: ./target/${{matrix.target}}/release/${{ matrix.target }}.zip
+          path: |
+            ./target/${{matrix.target}}/release/*.exe
+
       - name: Clear the cargo caches
         run: |
           cargo install cargo-cache --version 0.8.2 --no-default-features --features ci-autoclean
