--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -91,7 +91,8 @@ jobs:
         with:
           name: ${{ matrix.target }}.zip
           path: |
-            ./target/${{matrix.target}}/release/*.exe
+            ./target/${{matrix.target}}/release/admin
+            ./target/${{matrix.target}}/release/server
 
       - name: Clear the cargo caches
         run: |
