--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -166,10 +166,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
-          path: ~/artifacts
+          path: ./artifacts
       - name: Display structure of downloaded files
         run: ls -R
-        working-directory: ~/artifacts
+        working-directory: ./artifacts
 
       - name: Get current Branch
         id: branch
@@ -186,4 +186,4 @@ jobs:
             TODO New Release.
           draft: false
           prerelease: false
-          asset_files: '~/artifacts'
+          asset_files: './artifacts'
