wip: 尝试静态编译linux版本

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -184,6 +184,7 @@ jobs:
           done
           EOF
           sh zip_files.sh
+          rm -rf zip_files.sh
         working-directory: ./artifacts
 
       - name: Get current Branch
