--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,8 @@
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
+      - 'release/**'
 
 name: Build and Release
 
@@ -146,19 +150,18 @@ jobs:
           rm -rf zip_files.sh
         working-directory: ./artifacts
 
-      - name: Get current Branch
-        id: branch
-        run: echo "::set-output name=branch::$(git branch| tr -d '* ')"
+      - name: Get Tag Name
+        id: tag_name
+        run: echo "::set-output name=tag_name::$(a=$(git rev-parse --abbrev-ref HEAD) && echo ${a/#release\/})"
       - name: Duplicate Release With Asset to public_Repo
         id: Release-AIO
         uses: Hs1r1us/Release-AIO@v2.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
-          tag_name: v${{ steps.branch.outputs.branch }}
-          release_name: ${{ steps.branch.outputs.branch }}
-          body: |
-            TODO New Release.
+          tag_name: v${{ steps.tag_name.outputs.tag_name }}
+          release_name: ${{ steps.tag_name.outputs.tag_name }}
+          body: Release ${{ steps.tag_name.outputs.tag_name }}
           draft: false
           prerelease: false
           asset_files: './artifacts'
