feat: admin集成前端打包结果

--- a/admin/actix.toml
+++ b/admin/actix.toml
@@ -72,3 +72,4 @@ private-key = "path/to/cert/key.pem"
 [application]
 jwt-secret="replace_it"
 mysql-url="mysql://root:root@localhost:3306/virt-db-meta"
+static-dir="admin/dist"
