--- a/admin/Cargo.toml
+++ b/admin/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 actix-web = "4"
 actix-cors = "0.6.4"
 actix-settings = "0.6.0"
+actix-files = "0.6.2"
+
 jsonwebtoken = "8.2.0"
 chrono = "0.4.23"
 sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
