chore: docker build & push 配置

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,17 @@
 FROM clux/muslrust:stable AS builder
 
 COPY . .
-RUN cargo build --release --bin server
+
+RUN echo '[source.crates-io]\n\
+           replace-with = "tuna"\n\
+           \n\
+           [source.tuna]\n\
+           registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"' \
+    >> .cargo/config.toml
+RUN rustup default nightly \
+    && rustup target add x86_64-unknown-linux-musl \
+    && cargo +nightly build --target=x86_64-unknown-linux-musl --release --bin server
+
 
 FROM alpine:3.17.1
 RUN apk add vim curl
