--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+test-log = { version = "0.2.11", features = ["log"] }
+env_logger = "*"
 
 [dependencies]
 log = "*"
