--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -46,6 +46,7 @@ toml = "0.5.10"
 anyhow = "1.0.68"
 sha1 = "0.10.5"
 
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json","blocking"] }
 itertools = "0.10.5"
 num_cpus = "1.15.0"
+crossbeam = "0.8.2"
