feat: 增加redis cluster支持

--- a/server/config.example.toml
+++ b/server/config.example.toml
@@ -13,9 +13,7 @@ ip="127.0.0.1"
 port=3306
 
 [redis]
-ip="127.0.0.1"
-port=6379
-requirepass="123456"
+nodes="redis://123456@127.0.0.1:6379,redis://123456@127.0.0.1:6380"
 
 [meta_db]
 ip="127.0.0.1"
