--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -27,7 +27,7 @@ clap = {version="3.2.14",features = [ "derive" ]}
 
 slab = "0.4.7"
 sqlparser = "0.18.0"
-redis = { version = "0.17.0", features = ["tokio-comp"] }
+redis = { version = "0.17.0", features = ["tokio-comp","r2d2","tokio","cluster"] }
 serde = {version="1.0.140",features = ["derive"],default-features = false}
 serde_json = "1.0"
 
@@ -50,3 +50,4 @@ reqwest = { version = "0.11", features = ["json","blocking"] }
 itertools = "0.10.5"
 num_cpus = "1.15.0"
 crossbeam = "0.8.2"
+async-std = "1.12.0"
