--- a/server/config.toml
+++ b/server/config.toml
@@ -13,9 +13,7 @@ ip="127.0.0.1"
 port=3306
 
 [redis]
-ip="127.0.0.1"
-port=6379
-requirepass="123456"
+nodes="redis://127.0.0.1:6379"
 
 [meta_db]
 ip="127.0.0.1"
