--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,21 +1,8 @@
-FROM clux/muslrust:stable AS builder
-
-COPY . .
-
-RUN echo '[source.crates-io]\n\
-           replace-with = "tuna"\n\
-           \n\
-           [source.tuna]\n\
-           registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"' \
-    >> .cargo/config.toml
-RUN rustup default nightly \
-    && rustup target add x86_64-unknown-linux-musl \
-    && cargo +nightly build --target=x86_64-unknown-linux-musl --release --bin server
-
-
-FROM alpine:3.17.1
+FROM alpine:3.17.2
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 RUN apk add vim curl
 
-COPY --from=builder /volume/target/x86_64-unknown-linux-musl/release/server /app/
+ADD target/x86_64-unknown-linux-musl/release/server /app
+RUN ls /app
 EXPOSE 10101
 ENTRYPOINT ["/app/server"]
