fix: 配置文件默认路径读取错误

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,9 @@
 FROM alpine:3.17.2
+WORKDIR /app
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 RUN apk add vim curl
 
-ADD target/x86_64-unknown-linux-musl/release/server /app/server
-RUN ls /app
+COPY target/x86_64-unknown-linux-musl/release/server /app/server
+
 EXPOSE 10101
-ENTRYPOINT ["/app/server"]
+ENTRYPOINT ["/app/server","-c","/app/conf/config.toml"]
